--- a/components/Header/header.module.css
+++ b/components/Header/header.module.css
@@ -1,6 +1,6 @@
 .header{
     width: 100%;
-    height: 15vw;
+    height: 10%;
     background-color: white;
     display: flex;
     justify-content: flex-end;
