--- a/components/Sidemenu/sidemenu.module.css
+++ b/components/Sidemenu/sidemenu.module.css
@@ -1,6 +1,6 @@
 .sidemenu{
     width: 100px;
-    height: 85.5vh;
+    height: 90%;
     background-color: rgb(14, 10, 10);
     display: flex;
     flex-direction: column;
