--- a/components/Header/header.module.css
+++ b/components/Header/header.module.css
@@ -1,16 +1,30 @@
-.header{
-    width: 100%;
-    height: 10%;
-    background-color: white;
+.header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
-
-}
-
-.icon{
-    font-size: 60px;
-    color: black;
+    width: 100%;
+    background-color: #730A0A; /* Color de fondo de la barra superior */
+    color: white; /* Color del texto */
+    padding: 10px 20px; /* Espaciado interno */
+    height: 10%;
+    top: 0;
+  }
+  
+  .titulo_principal {
+    font-size: 24px;
+    margin: 0;
+  }
+  
+  .icons {
+    display: flex;
+  }
+  
+  .icon {
     margin-right: 10px;
     margin-left: 10px;
-}
+    font-size: 60px;
+    margin-left: 10px;
+    cursor: pointer;
+    color: hwb(0 100% 0%)
+  }
+  
