--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,12 +1,26 @@
 .main {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-  padding: 0 0.5rem;
+  height: 100vh; /* Establece el alto del contenedor principal al 100% del viewport */
+  background-color: #D8D9D7;
+}
+
+.content {
+  display: flex;
+  flex: 1; /* El contenido ocupa todo el espacio restante */
+}
+
+.sidemenu {
+  width: 200px; /* Ancho del sidemenu */
   background-color: #f0f0f0;
 }
+
+.pageContent {
+  flex: 1; /* El contenido de la página ocupa todo el espacio restante */
+  padding: 20px;
+}
+
+
 
 .container {
   display: flex;
